@@ -2,6 +2,7 @@ MEFA4 VERSIONS
 
 Version 0.2-1 -- February 14, 2011
     * Melt function added to reverse side effects of Xtab.
+    * Docs for Melt added (Rd, tests, vignette).
 
 Version 0.2-0 -- February 7, 2011
     * First public CRAN release.
